--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     </div>
                     <div class="col-8 d-flex align-items-center justify-content-end p-0">
                         <div class="header-icons">
-                            <a href="#" class="icon-link"><img src="image/icons/icons-compare.svg"></a>
-                            <a href="#" class="icon-link"><img src="image/icons/icons-favourite.svg"></a>
-                            <a href="#" class="icon-link"><img src="image/icons/icons-cart.svg"></a>
+                            <a href="product-compare.html" class="icon-link"><img src="image/icons/icons-compare.svg"></a>
+                            <a href="product-favorite.html" class="icon-link"><img src="image/icons/icons-favourite.svg"></a>
+                            <a href="product-basket.html" class="icon-link"><img src="image/icons/icons-cart.svg"></a>
                             <div class="dropdown search-dropdown">
                                 <button class="dropdown-toggle search-button icon-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <img src="image/icons/loupe.svg">
@@ -61,16 +61,16 @@
         </div>
         <div class="offcanvas offcanvas-start p-0" id="sobsan-offcanvas">
             <div class="offcanvas-header">
-                <a href="#"><img src="image/logo/sobsan-logo.svg"></a>
+                <a href="index.html"><img src="image/logo/sobsan-logo.svg"></a>
                 <a href="#" class="pulse-icon"><i class="fa-solid fa-phone"></i></a>
                 <a href="#" class="pulse-icon"><i class="fa-solid fa-question"></i></a>
-                <a href="#"><img src="image/icons/icons-login.svg"><span>Giriş</span></a>
+                <a href="login.html"><img src="image/icons/icons-login.svg"><span>Giriş</span></a>
                 <button type="button" data-bs-dismiss="offcanvas"><i class="fa-solid fa-xmark"></i></button>
             </div>
             <div class="offcanvas-body p-0">
                 <div class="categories-wrapper">
                     <div class="category-item">
-                        <a href="#">Məhsullar</a>
+                        <a href="products.html">Məhsullar</a>
                         <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#mehsullar-collapse">
                             <i class="fa-solid fa-chevron-right"></i>
                         </button>
@@ -98,7 +98,7 @@
                                     <i class="fa-solid fa-chevron-right"></i>
                                 </button>
                             </div>
-                            <div class="collapse" id="su-esasli-boyalar-collapse">
+                            <div class="collapse" id="solvent-esasli-boyalar-collapse">
                                 <div class="alt-menu-2">
                                     <div class="category-item"><a href="#">Sintetik boyalar</a></div>
                                     <div class="category-item"><a href="#">Sellülozik boyalar</a></div>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
                     <div class="category-item">
-                        <a href="#">Dekorativ Boyalar</a>
+                        <a href="decorative-paints.html">Dekorativ Boyalar</a>
                         <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#dekorativ-boyalar-collapse">
                             <i class="fa-solid fa-chevron-right"></i>
                         </button>
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="category-item">
-                        <a href="#">Sənayə Boyaları</a>
+                        <a href="industrial-paints.html">Sənayə Boyaları</a>
                         <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#senaye-boyalari-collapse">
                             <i class="fa-solid fa-chevron-right"></i>
                         </button>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="category-item">
-                        <a href="#">İnşaat Məhsulları</a>
+                        <a href="construction-products.html">İnşaat Məhsulları</a>
                         <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#insaat-mehsullari-collapse">
                             <i class="fa-solid fa-chevron-right"></i>
                         </button>
@@ -163,7 +163,7 @@
                         </div>
                     </div>
                     <div class="category-item">
-                        <a href="#">Boyaçı alətləri</a>
+                        <a href="painter-tools.html">Boyaçı alətləri</a>
                         <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#boyaci-aletleri-collapse">
                             <i class="fa-solid fa-chevron-right"></i>
                         </button>
@@ -174,21 +174,21 @@
                             <div class="category-item"><a href="#">Rulonlar</a></div>
                         </div>
                     </div>
-                    <div class="category-item"><a href="#">Digər</a></div>
+                    <div class="category-item"><a href="other-products.html">Digər</a></div>
                 </div>
                 <div class="offcanvas-links">
                     <div class="link-item">
-                        <a href="#">Haqqımızda</a>
+                        <a href="about.html">Haqqımızda</a>
                         <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#haqqimizda-collapse">
                             <i class="fa-solid fa-chevron-right"></i>
                         </button>
                     </div>
                     <div class="collapse" id="haqqimizda-collapse">
                         <div class="alt-menu">
-                            <div class="link-item"><a href="#">Rəngləndirmə sistemi haqqında</a></div>
+                            <div class="link-item"><a href="coloring-system.html">Rəngləndirmə sistemi haqqında</a></div>
                         </div>
                     </div>
-                    <div class="link-item"><a href="#">Kataloqlar</a></div>
+                    <div class="link-item"><a href="catalogs.html">Kataloqlar</a></div>
                     <div class="link-item">
                         <a href="#">Media</a>
                         <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#media-collapse">
@@ -197,18 +197,18 @@
                     </div>
                     <div class="collapse" id="media-collapse">
                         <div class="alt-menu">
-                            <div class="link-item"><a href="#">Aksiyalar</a></div>
-                            <div class="link-item"><a href="#">Xəbərlər</a></div>
-                            <div class="link-item"><a href="#">Qalareya</a></div>
+                            <div class="link-item"><a href="actions.html">Aksiyalar</a></div>
+                            <div class="link-item"><a href="news.html">Xəbərlər</a></div>
+                            <div class="link-item"><a href="gallery.html">Qalareya</a></div>
                         </div>
                     </div>
-                    <div class="link-item"><a href="#">Ödəniş və çatdırılma</a></div>
-                    <div class="link-item"><a href="#">Zəmanət şərtləri</a></div>
-                    <div class="link-item"><a href="#">Bizimlə əlaqə</a></div>
+                    <div class="link-item"><a href="payment-delivery.html">Ödəniş və çatdırılma</a></div>
+                    <div class="link-item"><a href="warranty-terms.html">Zəmanət şərtləri</a></div>
+                    <div class="link-item"><a href="contact.html">Bizimlə əlaqə</a></div>
                 </div>
             </div>
             <div class="offcanvas-bottom">
-                <a href="#"><img src="image/logo/usta_logo.png" width="80"></a>
+                <a href="masters-union.html"><img src="image/logo/usta_logo.png" width="80"></a>
                 <div class="sosial-icons">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -221,23 +221,23 @@
                 <div class="top-navbar">
                     <div class="left">
                         <div class="tn-dropdown">
-                            <a href="#" class="top-nav-link">Haqqımızda</a>
+                            <a href="about.html" class="top-nav-link">Haqqımızda</a>
                             <div class="tn-dropdown-menu lg d-none">
-                                <a href="#" class="top-nav-link">Rəngləndirmə sistemləri haqqında</a>
+                                <a href="coloring-system.html" class="top-nav-link">Rəngləndirmə sistemləri haqqında</a>
                             </div>
                         </div>
-                        <a href="#" class="top-nav-link">Kataloqlar</a>
+                        <a href="catalogs.html" class="top-nav-link">Kataloqlar</a>
                         <div class="tn-dropdown">
                             <a href="#" class="top-nav-link">Media</a>
                             <div class="tn-dropdown-menu d-none">
-                                <a href="#" class="top-nav-link">Aksiyalar</a>
-                                <a href="#" class="top-nav-link">Xəbərlər</a>
-                                <a href="#" class="top-nav-link">Qalareya</a>
+                                <a href="actions.html" class="top-nav-link">Aksiyalar</a>
+                                <a href="news.html" class="top-nav-link">Xəbərlər</a>
+                                <a href="gallery.html" class="top-nav-link">Qalareya</a>
                             </div>
                         </div>
-                        <a href="#" class="top-nav-link">Ödəniş və çatdırılma</a>
-                        <a href="#" class="top-nav-link">Zəmanət şərtləri</a>
-                        <a href="#" class="top-nav-link">Bizimlə əlaqə</a>
+                        <a href="payment-delivery.html" class="top-nav-link">Ödəniş və çatdırılma</a>
+                        <a href="warranty-terms.html" class="top-nav-link">Zəmanət şərtləri</a>
+                        <a href="contact.html" class="top-nav-link">Bizimlə əlaqə</a>
                     </div>
                     <div class="right">
                         <div class="sosial-icons">
@@ -246,9 +246,9 @@
                             <a href="#"><i class="fa-brands fa-youtube"></i></a>
                         </div>
                         <div class="header-icons">
-                            <a href="#" class="icon-link"><img src="image/icons/icons-compare.svg"></a>
-                            <a href="#" class="icon-link"><img src="image/icons/icons-favourite.svg"></a>
-                            <a href="#" class="icon-link"><img src="image/icons/icons-cart.svg"></a>
+                            <a href="product-compare.html" class="icon-link"><img src="image/icons/icons-compare.svg"></a>
+                            <a href="product-favorite.html" class="icon-link"><img src="image/icons/icons-favourite.svg"></a>
+                            <a href="product-basket.html" class="icon-link"><img src="image/icons/icons-cart.svg"></a>
                             <div class="dropdown search-dropdown">
                                 <button class="dropdown-toggle search-button icon-link" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <img src="image/icons/loupe.svg">
@@ -270,7 +270,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="icon-link login"><img src="image/icons/icons-login.svg"><span>Giriş</span></a>
+                            <a href="login.html" class="icon-link login"><img src="image/icons/icons-login.svg"><span>Giriş</span></a>
                         </div>
                     </div>
                 </div>
@@ -278,14 +278,14 @@
             <div class="bottom-navbar">
                 <div class="container">
                     <div class="bottom-navbar-links">
-                        <a href="#" class="logo"><img src="image/logo/sobsan-logo.svg"></a>
-                        <button class="alt-category-panel-button"><a href="#" class="bottom-nav-link">Məhsullar</a></button>
-                        <button class="alt-category-panel-button"><a href="#" class="bottom-nav-link">Dekorativ Boyalar</a></button>
-                        <button class="alt-category-panel-button"><a href="#" class="bottom-nav-link">Sənaye Boyaları</a></button>
-                        <button class="alt-category-panel-button"><a href="#" class="bottom-nav-link">İnşaat Məhsulları</a></button>
-                        <button class="alt-category-panel-button"><a href="#" class="bottom-nav-link">Boyaçı Alətləri</a></button>
-                        <a href="#" class="bottom-nav-link">Digər</a>
-                        <a href="#" class="usta-logo"><img src="image/logo/usta_logo.png"></a>
+                        <a href="index.html" class="logo"><img src="image/logo/sobsan-logo.svg"></a>
+                        <button class="alt-category-panel-button"><a href="products.html" class="bottom-nav-link">Məhsullar</a></button>
+                        <button class="alt-category-panel-button"><a href="decorative-paints.html" class="bottom-nav-link">Dekorativ Boyalar</a></button>
+                        <button class="alt-category-panel-button"><a href="industrial-paints.html" class="bottom-nav-link">Sənaye Boyaları</a></button>
+                        <button class="alt-category-panel-button"><a href="construction-products.html" class="bottom-nav-link">İnşaat Məhsulları</a></button>
+                        <button class="alt-category-panel-button"><a href="painter-tools.html" class="bottom-nav-link">Boyaçı Alətləri</a></button>
+                        <a href="other-products.html" class="bottom-nav-link">Digər</a>
+                        <a href="masters-union.html" class="usta-logo"><img src="image/logo/usta_logo.png"></a>
                         <div class="fix-header-icons d-none">
                             <div class="header-icons">
                                 <div class="dropdown search-dropdown">
@@ -309,7 +309,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="#" class="icon-link login"><img src="image/icons/icons-login.svg"><span>Giriş</span></a>
+                                <a href="login.html" class="icon-link login"><img src="image/icons/icons-login.svg"><span>Giriş</span></a>
                             </div>
                         </div>
                     </div>
@@ -495,7 +495,7 @@
             <div class="footer-top row">
                 <div class="col-12 col-xl-3">
                     <div class="left">
-                        <a href="#" class="logo"><img src="image/logo/sobsan-logo.svg"></a>
+                        <a href="index.html" class="logo"><img src="image/logo/sobsan-logo.svg"></a>
                         <div class="sosial-icons">
                             <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -509,40 +509,40 @@
                             <div class="col-12 col-md-6 col-lg-3">
                                 <div class="footer-links">
                                     <span>Menyular</span>
-                                    <a href="#">Haqqımızda</a>
-                                    <a href="#">Kataloqlar</a>
-                                    <a href="#">Aksiyalar</a>
-                                    <a href="#">Xəbərlər</a>
-                                    <a href="#">Qalereya</a>
-                                    <a href="#">Ödəniş və çatdırılma</a>
-                                    <a href="#">Zəmanət şərtləri</a>
-                                    <a href="#">Bizimlə əlaqə</a>
+                                    <a href="about.html">Haqqımızda</a>
+                                    <a href="catalogs.html">Kataloqlar</a>
+                                    <a href="actions.html">Aksiyalar</a>
+                                    <a href="news.html">Xəbərlər</a>
+                                    <a href="gallery.html">Qalereya</a>
+                                    <a href="payment-delivery.html">Ödəniş və çatdırılma</a>
+                                    <a href="warranty-terms.html">Zəmanət şərtləri</a>
+                                    <a href="contact.html">Bizimlə əlaqə</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-3">
                                 <div class="footer-links">
                                     <span>Kateqoriyalar</span>
-                                    <a href="#">Məhsullar</a>
-                                    <a href="#">Dekorativ boyalar</a>
-                                    <a href="#">Sənaye boyaları</a>
-                                    <a href="#">İnşaat məhsulları</a>
-                                    <a href="#">Boyaçı alətləri</a>
-                                    <a href="#">Digər</a>
+                                    <a href="products.html">Məhsullar</a>
+                                    <a href="decorative-paints.html">Dekorativ boyalar</a>
+                                    <a href="industrial-paints.html">Sənaye boyaları</a>
+                                    <a href="construction-products.html">İnşaat məhsulları</a>
+                                    <a href="painter-tools.html">Boyaçı alətləri</a>
+                                    <a href="other-products.html">Digər</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-3">
                                 <div class="footer-links">
                                     <span>Ünvanlarımız</span>
-                                    <a href="#">Baş ofis</a>
-                                    <a href="#">Fabrik ünvanı</a>
+                                    <a href="service-network.html">Baş ofis</a>
+                                    <a href="service-network.html">Fabrik ünvanı</a>
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-3">
                                 <div class="footer-links">
                                     <span>Faydalı linklər</span>
-                                    <a href="#">Tez-tez soruşulanlar</a>
-                                    <a href="#">Karyera</a>
-                                    <a href="#">Xidmət şəbəkəsi</a>
+                                    <a href="faq.html">Tez-tez soruşulanlar</a>
+                                    <a href="career.html">Karyera</a>
+                                    <a href="service-network.html">Xidmət şəbəkəsi</a>
                                 </div>
                             </div>
                         </div>
