--- a/index.html
+++ b/index.html
@@ -574,21 +574,21 @@
                 <img src="image/icons/sebet-black.png">
                 <span class="card-badge">0</span>
             </div>
-            <a href="#">Səbət</a>
+            <a href="product-basket.html">Səbət</a>
         </button>
         <button class="toolbar-card">
             <div class="icon">
                 <img src="image/icons/heart-black.png">
                 <span class="card-badge">0</span>
             </div>
-            <a href="#">Seçilmişlər</a>
+            <a href="product-favorite.html">Seçilmişlər</a>
         </button>
         <button class="toolbar-card">
             <div class="icon">
                 <img src="image/icons/compare-black.png">
                 <span class="card-badge">0</span>
             </div>
-            <a href="#">Müqayisələr</a>
+            <a href="product-compare.html">Müqayisələr</a>
         </button>
     </div>
     <div class="page-toolbar-bottom">
