end products page

--- a/index.html
+++ b/index.html
@@ -1101,6 +1101,89 @@
                 </div>
             </div>
         </section>
+        <section class="news-section">
+            <div class="container">
+                <span class="section-title">Xəbərlər</span>
+                <div class="swiper news-swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <a href="#" class="news-item">
+                                <div class="news-image"><img src="image/1-main/xeberler/img-1.jpg"></div>
+                                <span class="news-header">Dekorativ boya təlimi</span>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="news-item">
+                                <div class="news-image"><img src="image/1-main/xeberler/img-2.png"></div>
+                                <span class="news-header">Ustalar üçün asan qeydiyyat</span>
+                            </a>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="#" class="news-item">
+                                <div class="news-image"><img src="image/1-main/xeberler/img-3.jpg"></div>
+                                <span class="news-header">Xocalı soyqırımı</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="videos-section">
+            <div class="container">
+                <span class="section-title">Videolar</span>
+                <div class="swiper video-swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="image/1-main/video/img-1.jpg"></div>
+                                <div class="hover-absolute-div">
+                                    <a href="https://www.youtube.com/watch?v=MPx4mekJkNA" data-fancybox="gallery">
+                                        <span class="play-button"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="image/1-main/video/img-2.jpg"></div>
+                                <div class="hover-absolute-div">
+                                    <a href="https://www.youtube.com/watch?v=_rdOU3hor2w" data-fancybox="gallery">
+                                        <span class="play-button"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="video-item">
+                                <div class="video-poster"><img src="image/1-main/video/img-3.jpg"></div>
+                                <div class="hover-absolute-div">
+                                    <a href="https://www.youtube.com/watch?v=cF8A6YE_CwQ" data-fancybox="gallery">
+                                        <span class="play-button"><i class="fa-solid fa-play"></i></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="partners-section">
+            <div class="container">
+                <div class="swiper partners-swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <img src="image/1-main/partners/img-1.png">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="image/1-main/partners/img-2.png">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="image/1-main/partners/img-3.png">
+                        </div>
+                    </div>
+                </div>
+            </div> 
+        </section>
     </main>
 
 
