--- a/construction-products.html
+++ b/construction-products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobsan | Məhsullar</title>
+    <title>Sobsan | İnşaat Məhsulları</title>
     <link rel="icon" href="image/logo/head-icon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
@@ -492,20 +492,20 @@
             <div class="root-links">
                 <a href="#">Əsas səhifə</a>
                 <i class="fa-solid fa-chevron-right"></i>
-                <a href="#">Məhsullar</a>
+                <a href="#">İnşaat Məhsulları</a>
             </div>
-            <h1>Məhsullar</h1>
+            <h1>İnşaat Məhsulları</h1>
         </div>
         <section class="sobsan-products-section">
             <div class="container">
                 <div class="products-poster">
-                    <img src="image/12-mehsullar/main-img.jpg">
+                    <img src="image/12-mehsullar/insaat-bg.jpg">
                 </div>
                 <div class="general-wrapper row">
                     <div class="col-12 col-lg-4 col-xl-3 wrapper-col">
                         <div class="general-wrapper-left">
                             <div class="categories-wrapper d-lg-none">
-                                <div class="category-item active">
+                                <div class="category-item">
                                     <a href="products.html">Məhsullar</a>
                                     <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#mehsullar-collapse">
                                         <i class="fa-solid fa-chevron-right"></i>
@@ -572,7 +572,7 @@
                                         <div class="category-item"><a href="#">Tinerlər</a></div>
                                     </div>
                                 </div>
-                                <div class="category-item">
+                                <div class="category-item active">
                                     <a href="construction-products.html">İnşaat Məhsulları</a>
                                     <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#insaat-mehsullari-collapse">
                                         <i class="fa-solid fa-chevron-right"></i>
@@ -614,7 +614,7 @@
                             </div>
                             <div class="categories-wrapper main d-none d-lg-flex">
                                 <div class="category-button">
-                                    <div class="category-item active">
+                                    <div class="category-item">
                                         <a href="products.html">Məhsullar</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
@@ -673,7 +673,7 @@
                                     </div>
                                 </div>
                                 <div class="category-button">
-                                    <div class="category-item">
+                                    <div class="category-item active">
                                         <a href="construction-products.html">İnşaat Məhsulları</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
