--- a/other-products.html
+++ b/other-products.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobsan | Məhsullar</title>
+    <title>Sobsan | Digər</title>
     <link rel="icon" href="image/logo/head-icon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
@@ -492,9 +492,9 @@
             <div class="root-links">
                 <a href="#">Əsas səhifə</a>
                 <i class="fa-solid fa-chevron-right"></i>
-                <a href="#">Məhsullar</a>
+                <a href="#">Digər</a>
             </div>
-            <h1>Məhsullar</h1>
+            <h1>Digər</h1>
         </div>
         <section class="sobsan-products-section">
             <div class="container">
@@ -505,7 +505,7 @@
                     <div class="col-12 col-lg-4 col-xl-3 wrapper-col">
                         <div class="general-wrapper-left">
                             <div class="categories-wrapper d-lg-none">
-                                <div class="category-item active">
+                                <div class="category-item">
                                     <a href="products.html">Məhsullar</a>
                                     <button class="collapse-button" type="button" data-bs-toggle="collapse" data-bs-target="#mehsullar-collapse">
                                         <i class="fa-solid fa-chevron-right"></i>
@@ -610,11 +610,11 @@
                                         <div class="category-item"><a href="#">Rulonlar</a></div>
                                     </div>
                                 </div>
-                                <div class="category-item"><a href="other-products.html">Digər</a></div>
+                                <div class="category-item active"><a href="other-products.html">Digər</a></div>
                             </div>
                             <div class="categories-wrapper main d-none d-lg-flex">
                                 <div class="category-button">
-                                    <div class="category-item active">
+                                    <div class="category-item">
                                         <a href="products.html">Məhsullar</a>
                                         <i class="fa-solid fa-chevron-right"></i>
                                     </div>
@@ -704,7 +704,7 @@
                                         <div class="category-item"><a href="#">Rulonlar</a></div>
                                     </div>
                                 </div>
-                                <div class="category-item"><a href="other-products.html">Digər</a></div>
+                                <div class="category-item active"><a href="other-products.html">Digər</a></div>
                             </div>
                             <form action="#" class="filters-wrapper">
                                 <button class="filter-item" type="button" data-bs-toggle="collapse" href="#qiymet-collapse">
