--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -631,7 +631,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -675,7 +675,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -719,7 +719,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -763,7 +763,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -807,7 +807,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -851,7 +851,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -895,7 +895,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -939,7 +939,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
@@ -983,7 +983,7 @@
                                         <button class="product-button compare">
                                             <img class="compare-white d-none" src="image/icons/icons-compare-white.svg">
                                             <img class="compare-red" src="image/icons/icons-compare.svg">
-                                            <span>Müqayisə et</span>
+                                            <span>Müqayisə</span>
                                         </button>
                                         <button class="product-button favorite">
                                             <img class="favorite-full d-none" src="image/icons/icons-favourite-full.svg">
